[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperpilot"
version = "1.0.0"
description = "🚀 AI-Powered HyperOS Device Agent — Control your Android phone with natural language commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MrMiff", email = "hermesagent202@gmail.com"},
]
keywords = ["ai", "android", "adb", "hyperos", "xiaomi", "automation", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "streamlit>=1.31.0",
    "openai>=1.12.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
    "black>=24.0",
    "pip-audit>=2.7",
]
ocr = [
    "pytesseract>=0.3.10",
]

[project.urls]
Homepage = "https://github.com/MrMiff/hyperpilot"
Repository = "https://github.com/MrMiff/hyperpilot"
Issues = "https://github.com/MrMiff/hyperpilot/issues"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
